<resources>
    <string name="app_name">Khelo India - Assessor</string>
    <string name="forgot_password_text">Please enter your email address registered with us</string>
    <string name="otp_text">(Enter the OTP sent on your registered email id)</string>
    <string name="school_select">Select School</string>
    <string name="test_select">Select Test</string>
    <string name="test_status">Test Status</string>
    <string name="test_status_report">Test Status Report</string>
    <string name="string_agility_text">Enter Illinois Circuit Agility Test Score</string>
    <string name="string_flexibility_text">Enter Active Straight Leg Raise Test Score</string>
    <string name="string_hand_eye">Enter Hand-eye Coordination Test Score</string>
    <string name="username">Please enter username</string>
    <string name="password">Please enter password</string>
    <string name="exit_from_test">Please ensure that the Test Score is saved before switching to another screen. Are you sure you want to continue (without saving)?</string>
    <string name="exit_from_app">Are you sure you want to exit from the Assessor-KheloIndia App?</string>
    <string name="validate_class_drop_down">Class Drop Down should be chosen</string>
    <string name="email_verification_symbols">^[\\w-_\\.+]*[\\w-_\\.]\\@([\\w]+\\.)+[\\w]+[\\w]$</string>
    <string name="server_down">Application cannot connect with the server right now. Possible Reasons: Your Mobile Data may be off or internet speed may be slow. </string>
    <string name="no_internet">Internet not available please try again later</string>
    <string name="data_save_success">Data saved successfully</string>
    <string name="time_status_entry_empty">No start time</string>
    <string name="time_status_exit_empty">No end time</string>
    <string name="sync_going_on">Sync is going on</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="enable_your_internet">Please enable your internet connection!</string>
        <string name="base_url">http://103.65.20.140:8082/Service1.svc/</string>
    <string name="forgot_password_success">You have set the new password successfully</string>
    <string name="select_test">Select Test</string>
    <string name="select_class">Select Class</string>
    <string name="all">All</string>
    <string name="all_tests">All Tests</string>
    <string name="all_classes">All Classes</string>
    <string name="validate_test_drop_down">Test Drop Down should be chosen</string>
    <string name="monthTitleFont">roboto_light</string>
    <string name="dayOfWeekFont">roboto_regular</string>
    <string name="dayOfMonthFont">roboto_light</string>
    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings)</string>
    <string name="activity_log">Activity Log</string>
    <string name="my_activity_log">My Activity Log</string>
    <string name="view_dart_board">View DART Board</string>
    <string name="date_choose">Date should be chosen</string>
    <string name="month_choose">Month should be chosen</string>
    <string name="year_choose">Year should be chosen</string>
    <string name="classs">Class</string>
    <string name="lesson_plan">Select Lesson Plan</string>
    <string name="sports_technique">Select Sports</string>
    <string name="other">Select</string>
    <string name="period">Period</string>
    <string name="make_my_dart">Make My DART</string>
    <string name="reset_data">Are you sure you want to reset all the fields?</string>
    <string name="please_scan">Please make sure that the Student Data and Test Score are filled in, before Saving.</string>
    <string name="please_stop_timer">Please stop the timer, before Saving.</string>
    <string name="not_for_juniors">You cannot take the test for junior section.</string>
    <string name="validate_net_reading">Final Reading should be more than Initial Reading.</string>
    <string name="nill_score">—</string>
    <string name="nill_score_excel_sheet">--</string>
    <string name="kg">\u0020kg</string>
    <string name="hyphon_slash_label">—/—</string>
    <string name="csv_message_loader">Exporting data please wait...</string>
    <string name="schools_message_loader">Please wait while we fetch the latest data for the school.</string>
    <string name="tests_message_loader">Please wait while we fetch the latest data for the tests.</string>
    <string name="attended_max">Attended By ⊕</string>
    <string name="attended_min">Attended By ⊖</string>
    <string name="progress_loader">Loading the data please wait...</string>
    <string name="notification_title">For awesome features and a smoother experience</string>
    <string name="notification_content">A new version of app is available. Please update the new version of app</string>
    <string name="not_for_seniors">You cannot take the test for senior section.</string>
    <string name="throw_ball">Sports- Throw Ball</string>
    <string name="kabaddi">Sports- Kabaddi</string>
    <string name="football">Sports- Football</string>
    <string name="kho_kho">Sports- Kho Kho</string>
    <string name="hand_ball">Sports- Handball</string>
    <string name="cricket">Sports- Cricket</string>
    <string name="basket_ball">Sports- Basketball</string>
    <string name="volley_ball">Sports- Volleyball</string>
    <string name="athletics">Athletics</string>
    <string name="gymnastics_aerobics">Gymnastics/Aerobics</string>
    <string name="badminton">Sports- Badminton</string>
    <string name="squash">Sports- Squash</string>
    <string name="proficient">Proficient</string>
    <string name="exemplary">Exemplary</string>
    <string name="learning">Learning</string>
    <string name="absent">Absent</string>
    <string name="validate_class_period_drop_down">Class and Period drop downs should be chosen</string>
    <string name="validate_lesson_drop_down">Lesson Plan drop down should be chosen</string>
    <string name="validate_sports_drop_down">Sport drop down should be chosen</string>
    <string name="validate_other_drop_down">Other drop down should be chosen</string>
    <string name="validate_remarks">Please enter the Remarks</string>
    <string name="validate_boys_girls">Please enter the number of boys and girls</string>
    <string name="export_success">Export successful!</string>
    <string name="export_failed">Export failed</string>
    <string name="no_of_students">No of students:\u0020</string>
    <string name="incomplete_mapping_for_all">No student is assigned to the sport</string>
    <string name="complete_mapping_for_all">All students are assigned to the sport</string>
    <string name="data_save_message_alert">Please ensure data is saved before switching to another screen.</string>
    <string name="data_sync_message_alert">Please ensure data is synced after completion of taking the tests.</string>
    <string name="data_sync_all_message_alert">Are you sure you want to sync all the data of the students?</string>
    <string name="data_export_message_alert">Are you sure you want to store the data in csv file format and get it mailed?</string>
    <string name="data_save_message_sports_alert">It appears that \n\n a) Sports have not been mapped to students. OR \n b) You have not updated the students list of the school for the year.\n\nTo map sports to students, go to <b>Update TOP Sports</b> in the home screen.\n\n ​To update student list, please contact director/principal/HM for the students list. Help him/her to upload the student list from his/her active connect dashboard. \nDownload the format of the student: <a href="http://23.253.243.116:92/UploadStudentDataByTrainer.aspx">Download</a></string>
    <string name="data_save_message_shape_alert">It appears that you have not updated the students list of the school for the year. \n \n Without the students list, you will not be able to give grades to students for the activity. \n \nPlease contact principal/headmaster for the students list. \n \nDownload the format of the student: <a href="http://23.253.243.116:92/UploadStudentDataByTrainer.aspx">Download</a></string>
    <string name="term_expire">Your term has expired, no student is associated with this term.</string>
    <string name="sync_start">Syncronization started</string>
    <string name="sync_end1">Sync for seniors done</string>
    <string name="sync_end2">Sync for juniors done</string>
    <string name="sync_end3">Sync for seniors and juniors done</string>
    <string name="auth_sect_unallow">You are not authorized to access this section</string>
    <string name="view_report_string">VIEW REPORT (%s)</string>
    <string name="fitness_assessment">Fitness Assessment</string>
    <string name="user_name">Username</string>
    <string name="pass_word">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="new_user">New User</string>
    <string name="sign_up">Sign up</string>
    <string name="hindi">हिंदी</string>
    <string name="pref_lan">Select your preferred language</string>
    <string name="next">Next</string>
    <string name="start_fitness">START FITNESS ASSESSMENT</string>
    <string name="learn">LEARN</string>
    <string name="play">PLAY</string>
    <string name="validate_your_name">Please enter a valid name</string>
    <string name="validate_email_id">Please enter valid email id</string>
    <string name="validate_phone_number_not_empty">Please enter valid ten digit phone number</string>
    <string name="validate_username_not_empty">Please enter valid name</string>
    <string name="validate_qualification_not_empty">Please enter your qualification</string>
    <string name="validate_terms_and_conditions">Please accept the terms and conditions</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="accept_permission">Please allow the %s permission to use this feature. You can allow this in Settings->Apps->Khelo India Assessor->Permissions.</string>
    <string name="disqualified">Disqualified</string>
    <string name="app_update_message">Checking for app update, please wait...</string>
    <string name="unable_connect_server">Unable to connect to server!</string>
    <string name="admin_manual">Admin Manual</string>
    <string name="ecetificate">Download E-Certificate</string>
    <string name="sop">SOP</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="change_language">Change Language</string>
    <string name="student_name">Student Name</string>
    <string name="class_registration_number_label">Class, Registration Number</string>
    <string name="scan">scan</string>
    <string name="skip">skip</string>
    <string name="undo">undo</string>
    <string name="skipped">SKIPPED</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_policy">Password Policy</string>
    <string name="password_min_six_chars">1. Password should be minimum six characters.</string>
    <string name="password_atleast_one_digit">2. Password should have at least one digit.</string>
    <string name="password_least_one_special_char">3. Password should have at least one special character.</string>
    <string name="reset_password">Reset Password</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="please_enter_your_new_email_id">Please enter your new Email Id</string>
    <string name="verify">Verify</string>
</resources>