<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:padding="6dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/student_timer_tv"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="Score: 00:00:000"/>

        <LinearLayout
            android:id="@+id/student_details_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@+id/scan_btn"
            android:layout_toRightOf="@+id/boy_or_girl_img"
            android:orientation="vertical">

        <TextView
            android:id="@+id/student_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/student_class_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/black"
            android:text="@string/class_registration_number_label" />

        </LinearLayout>

    <!--<Button-->
        <!--android:id="@+id/student_scan_btn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="35dp"-->
       <!--android:layout_marginLeft="30dp"-->
        <!--android:background="@drawable/sacn_i"-->
        <!--android:text="SCAN"-->
        <!--android:textColor="@color/colorAccent"-->
        <!--android:stateListAnimator="@null"/>-->

    <!--<Button-->
        <!--android:id="@+id/student_remove_btn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="35dp"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:background="@drawable/sacn_i"-->
        <!--android:text="SKIP"-->
        <!--android:textColor="@color/colorAccent"-->
        <!--android:visibility="gone"/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/student_scan_btn"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/color_primary_border_button"
            android:text="@string/scan"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            />

        <Button
            android:id="@+id/student_remove_btn"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/red_border_button"
            android:text="@string/skip"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:visibility="gone"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/skipped_label"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:text="@string/skipped"
            android:gravity="center_vertical"
            android:textColor="@color/red"
            android:visibility="gone"
            />


        <Button
            android:id="@+id/undo_skipped_btn"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/color_primary_border_button"
            android:text="@string/undo"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

</LinearLayout>