<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="@dimen/fab_margin"
    android:paddingLeft="@dimen/fab_margin"
    android:paddingRight="@dimen/fab_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="20dp"
        android:text="@string/please_enter_your_new_email_id"
        android:textColor="#696969" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:id="@+id/email_lt"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_email_id"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/email_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/rectangle"
            />

    </LinearLayout>

    <Button
        android:id="@+id/verify_email_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:background="@drawable/take_test_button"
        android:text="@string/verify"
        android:textColor="@color/white" />

</LinearLayout>
