<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <include
            layout="@layout/tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="@dimen/fab_margin"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="20dp"
                android:text="@string/forgot_password_text"
                android:textColor="#696969" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:id="@+id/email_lt"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_email_id"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:id="@+id/email_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/rectangle"
                    />

            </LinearLayout>
            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/email_til"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:hint="Enter Email Id">-->

                <!--<EditText-->
                    <!--android:id="@+id/email_edt"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:drawableLeft="@drawable/ic_email"-->
                    <!--android:drawablePadding="10dp"-->
                    <!--android:singleLine="true" />-->

            <!--</android.support.design.widget.TextInputLayout>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:id="@+id/new_password_lt"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_password"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:id="@+id/new_password_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/rectangle"
                    android:inputType="textPassword"
                    android:drawableRight="@drawable/pwd_show_i"
                    />
            </LinearLayout>
            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/new_password_til"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="New Password">-->

                <!--<EditText-->
                    <!--android:id="@+id/new_password_edt"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:drawableLeft="@drawable/ic_key"-->
                    <!--android:drawablePadding="10dp"-->
                    <!--android:inputType="textPassword"-->
                    <!--android:singleLine="true" />-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:id="@+id/confirm_password_lt"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:id="@+id/confirm_password_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/rectangle"
                    android:inputType="textPassword"
                    android:drawableRight="@drawable/pwd_show_i"
                    />

            </LinearLayout>
            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/confirm_password_til"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="Confirm Password">-->

                <!--<EditText-->
                    <!--android:id="@+id/confirm_password_edt"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:drawableLeft="@drawable/ic_key"-->
                    <!--android:drawablePadding="10dp"-->
                    <!--android:inputType="textPassword"-->
                    <!--android:singleLine="true" />-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <LinearLayout
                android:id="@+id/password_policy_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">


                <TextView
                    android:id="@+id/password_policy_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/password_policy"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent" />


                <TextView
                    android:id="@+id/password_policy_body_one_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/password_min_six_chars" />

                <TextView
                    android:id="@+id/password_policy_body_two_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/password_atleast_one_digit" />

                <TextView
                    android:id="@+id/password_policy_body_three_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:text="@string/password_least_one_special_char" />

            </LinearLayout>


            <Button
                android:id="@+id/reset_password_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp"
                android:background="@drawable/take_test_button"
                android:text="@string/reset_password"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>