<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="50dp">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text1"
                android:layout_marginTop="30dp"
                android:text="@string/otp_text"
                android:gravity="center"
                android:textColor="#696969"/>

            <TextView
                android:id="@+id/email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/colorPrimary" />


            <EditText
                android:id="@+id/otp_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_otp"
                android:singleLine="true"
                android:gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="40dp"
                android:textSize="25dp"/>

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/submit"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:textColor="@color/white"
                android:background="@drawable/take_test_button"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/resend_otp_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/resend_otp"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </LinearLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="visible"
        app:backgroundTint="@color/colorPrimary"
        app:layout_anchor="@id/linear_layout1"
        app:layout_anchorGravity="bottom|center_horizontal|center"
        android:clickable="true"
        app:srcCompat="@drawable/otp_i" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>